--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -29,7 +29,7 @@
   {% for comment in post.comments.all %}
   <br>
     {% if user.is_authenticated or comment.approved_comment %}
-      {{comment.created.date }}
+      {{comment.created_date }}
         {% if not comment.approved_comment %}
         <a class='btn btn-primary' href="{% url 'comment_remove' pk=comment.pk %}">
           <span class='glyphicon glyphicon-remove'>Remove</span>
